--- a/style.css
+++ b/style.css
@@ -4,15 +4,14 @@ body {
 }
 
 .wrapper {
+  color: #fff;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   background-color: #00d1b2;
-  color: #444;
 }
 
 .box {
-  background-color: #444;
   color: #fff;
   border-radius: 5px;
   padding: 20px;
