--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ li {
   display: inline;
 }
 
-h1, input::-webkit-input-placeholder, button {
+h1,
+input::-webkit-input-placeholder,
+button {
   font-family: 'roboto', sans-serif;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -97,17 +99,19 @@ input {
   color: #0e6252;
 }
 
-input:focus, input:valid {
+input:focus,
+input:valid {
   box-shadow: none;
   outline: none;
   background-position: 0 0;
 }
 
-input:focus::-webkit-input-placeholder, input:valid::-webkit-input-placeholder {
+input:focus::-webkit-input-placeholder,
+input:valid::-webkit-input-placeholder {
   color: #1abc9c;
   font-size: 11px;
   -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
+  transform: translateY(-20px);
   visibility: visible !important;
 }
 
@@ -125,7 +129,7 @@ button {
 
 button:hover {
   -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+  transform: translateY(-3px);
   box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
